Fxied Signature UI

--- a/idea/signature/signature.component.html
+++ b/idea/signature/signature.component.html
@@ -19,7 +19,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-list class="signatureList">
+  <ion-list class="aList">
     <ion-list-header>
       <ion-label>{{ 'IDEA.SIGNATURE.SIGNATORY' | translate }}</ion-label>
     </ion-list-header>
@@ -42,7 +42,7 @@
       </ion-button>
     </ion-item>
   </ion-list>
-  <ion-list class="signatureList">
+  <ion-list class="aList">
     <ion-list-header>
       <ion-label>{{ 'IDEA.SIGNATURE.SIGNATURE_EXPLANATION' | translate }}</ion-label>
     </ion-list-header>
