--- a/idea/address/address.component.html
+++ b/idea/address/address.component.html
@@ -16,7 +16,7 @@
       {{ 'IDEA.ADDRESS.CONTACT' | translate }}
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.CONTACT_HINT')"
       [title]="t._('IDEA.ADDRESS.CONTACT_HINT')"
@@ -29,7 +29,7 @@
       <ion-text class="obligatoryDot" *ngIf="editMode && obligatory"></ion-text>
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.ADDRESS_HINT')"
       [title]="t._('IDEA.ADDRESS.ADDRESS_HINT')"
@@ -41,7 +41,7 @@
       {{ 'IDEA.ADDRESS.ADDRESS2' | translate }}
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.ADDRESS2_HINT')"
       [title]="t._('IDEA.ADDRESS.ADDRESS2_HINT')"
@@ -53,7 +53,7 @@
       {{ 'IDEA.ADDRESS.POSTCODE' | translate }}
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.POSTCODE_HINT')"
       [title]="t._('IDEA.ADDRESS.POSTCODE_HINT')"
@@ -66,7 +66,7 @@
       <ion-text class="obligatoryDot" *ngIf="editMode && obligatory"></ion-text>
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.CITY_HINT')"
       [title]="t._('IDEA.ADDRESS.CITY_HINT')"
@@ -78,7 +78,7 @@
       {{ 'IDEA.ADDRESS.PROVINCE' | translate }}
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.PROVINCE_HINT')"
       [title]="t._('IDEA.ADDRESS.PROVINCE_HINT')"
@@ -102,7 +102,7 @@
       {{ 'IDEA.ADDRESS.PHONE' | translate }}
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.PHONE_HINT')"
       [title]="t._('IDEA.ADDRESS.PHONE_HINT')"
@@ -114,7 +114,7 @@
       {{ 'IDEA.ADDRESS.EMAIL' | translate }}
     </ion-label>
     <ion-input
-      autocomplete="off"
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.ADDRESS.EMAIL_HINT')"
       [title]="t._('IDEA.ADDRESS.EMAIL_HINT')"
