--- a/idea/map/map.component.scss
+++ b/idea/map/map.component.scss
@@ -2,8 +2,12 @@
   To add in global.scss:
 
   idea-map {
-    display: block;
+    display: none !important;
     width: 100%;
     height: 100%;
   }
+  idea-map.mapReady {
+    display: block !important;
+  }
+
 */
