--- a/idea/map/map.component.scss
+++ b/idea/map/map.component.scss
@@ -2,12 +2,12 @@
   To add in global.scss:
 
   idea-map {
-    display: none !important;
+    display: none;
     width: 100%;
     height: 100%;
   }
   idea-map.mapReady {
-    display: block !important;
+    display: block;
   }
 
 */
