Fixed autocomplete contacts

--- a/idea/contacts/contacts.component.html
+++ b/idea/contacts/contacts.component.html
@@ -4,6 +4,7 @@
       {{ 'IDEA.CONTACTS.NAME' | translate }}
     </ion-label>
     <ion-input
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.CONTACTS.NAME_HINT')"
       [title]="t._('IDEA.CONTACTS.NAME_HINT')"
@@ -15,6 +16,7 @@
       {{ 'IDEA.CONTACTS.PHONE' | translate }}
     </ion-label>
     <ion-input
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.CONTACTS.PHONE_HINT')"
       [title]="t._('IDEA.CONTACTS.PHONE_HINT')"
@@ -26,6 +28,7 @@
       {{ 'IDEA.CONTACTS.EMAIL' | translate }}
     </ion-label>
     <ion-input
+      autocomplete="new"
       [disabled]="!editMode"
       [placeholder]="t._('IDEA.CONTACTS.EMAIL_HINT')"
       [title]="t._('IDEA.CONTACTS.EMAIL_HINT')"
