Language picker, added fill option

--- a/idea/translations/languagePicker.component.html
+++ b/idea/translations/languagePicker.component.html
@@ -1,3 +1,8 @@
-<ion-button class="languagePicker" [title]="t._('IDEA.LANGUAGE_PICKER.CHANGE_LANGUAGE')" (click)="pickLanguage()">
+<ion-button
+  class="languagePicker"
+  [fill]="fill"
+  [title]="t._('IDEA.LANGUAGE_PICKER.CHANGE_LANGUAGE')"
+  (click)="pickLanguage()"
+>
   <img [src]="getFlagURL()" />
 </ion-button>
