--- a/idea/subscription/stripeSubscription.component.scss
+++ b/idea/subscription/stripeSubscription.component.scss
@@ -1,32 +1,17 @@
-ion-list {
-  padding: 10px 20px;
-  background: #f5f5f5f5;
-  ion-list-header {
-    padding-left: 0;
-    font-weight: 500;
-  }
-  .stripeHint {
-    margin-bottom: 20px;
-    ion-label {
-      width: 100%;
-    }
-  }
-  ion-item {
-    font-size: 1em;
-    border-radius: 5px;
-  }
-  #cardElement {
-    background: var(--ion-color-white);
-    padding: 15px 20px;
-    font-size: 1em;
-  }
-  .anchor {
-    color: var(--ion-color-primary);
-    font-weight: bold;
-    text-decoration: underline;
-    cursor: pointer;
-  }
+ion-item {
+  font-size: 1em;
+  border-radius: 5px;
 }
-.tappable {
+#cardElement {
+  background: white; // fixed
+  padding: 15px 20px;
+  font-size: 1em;
+}
+.anchor {
+  font-weight: bold;
+  text-decoration: underline;
   cursor: pointer;
+}
+.disclaimer {
+  font-size: 0.9em;
 }
