--- a/idea/subscription/subscription.component.html
+++ b/idea/subscription/subscription.component.html
@@ -1,40 +1,37 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
-    <ion-title>
-      {{ 'IDEA.SUBSCRIPTION.MANAGE_SUBSCRIPTION' | translate }}
-    </ion-title>
-    <ion-buttons slot="end">
-      <ion-button [title]="t._('COMMON.CANCEL_AND_CLOSE')" (click)="close()">
+    <ion-buttons slot="start">
+      <ion-button [title]="t._('COMMON.CLOSE')" (click)="close()">
         <ion-icon name="close" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-title>{{ 'IDEA.SUBSCRIPTION.MANAGE_SUBSCRIPTION' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card>
-    <ion-card-content>
-      <p>{{ 'IDEA.SUBSCRIPTION.MAIN_EXPLANATION_' + target.toUpperCase() | translate }}</p>
-      <p *ngIf="target === ProjectPlanTargets.TEAMS">
-        <b>{{ 'IDEA.SUBSCRIPTION.NOTE_WELL' | translate }}</b
-        >. {{ 'IDEA.SUBSCRIPTION.CALCULATION_METHOD' | translate }}
-      </p>
-    </ion-card-content>
-  </ion-card>
-  <div class="generalDivider">
-    {{ 'IDEA.SUBSCRIPTION.OPTIONS' | translate }}
-  </div>
-  <ion-list class="aList maxWidthContainer">
+  <ion-list class="aList">
+    <ion-card color="white" *ngIf="generalDescription">
+      <ion-card-content>{{ generalDescription }}</ion-card-content>
+    </ion-card>
+    <ion-list-header>
+      <ion-label>
+        <h2>{{ 'IDEA.SUBSCRIPTION.PLANS' | translate }}</h2>
+      </ion-label>
+    </ion-list-header>
+    <ion-item *ngIf="plans && !plans.length">
+      <ion-label>
+        <i>{{ 'IDEA.SUBSCRIPTION.NO_PLANS_AVAILABLE' | translate }}</i>
+      </ion-label>
+    </ion-item>
     <ion-item
       *ngFor="let plan of plans"
-      [class.tappable]="plan.planId !== subscription.planId"
+      [button]="!subscription || plan.planId !== subscription.planId"
       (click)="subscribe(plan)"
     >
       <ion-label>
-        {{ plan.title[t.getCurrentLang()] }}
-        <p>
-          {{ plan.description[t.getCurrentLang()] }}
-        </p>
-        <p *ngIf="subscription.planId === plan.planId">
+        {{ getLabelValue(plan.title) }}
+        <p>{{ getLabelValue(plan.description) }}</p>
+        <p *ngIf="subscription && subscription.planId === plan.planId">
           <ion-badge color="danger" *ngIf="isSubscriptionExpired(subscription)">
             {{ 'IDEA.SUBSCRIPTION.EXPIRED' | translate }}
           </ion-badge>
@@ -43,69 +40,52 @@
           </ion-badge>
         </p>
       </ion-label>
-      <ion-badge slot="end">
-        {{ plan.priceStr }}
-      </ion-badge>
+      <ion-badge slot="end">{{ plan.priceStr }}</ion-badge>
       <ion-icon
         slot="end"
-        *ngIf="subscription.planId"
+        *ngIf="subscription?.planId"
         [name]="subscription.planId === plan.planId ? 'radio-button-on' : 'radio-button-off'"
       >
       </ion-icon>
     </ion-item>
-  </ion-list>
-  <ion-grid class="maxWidthContainer" *ngIf="plans?.length">
-    <ion-row>
-      <ion-col>
-        <ion-button expand="block" fill="clear" (click)="restorePurchases()">
-          {{ 'IDEA.SUBSCRIPTION.RESTORE_PURCHASES' | translate }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row *ngIf="subscription.planId && isSubscriptionExpired(subscription)">
-      <ion-col>
-        <ion-button expand="block" fill="clear" color="danger" (click)="removeExpiredSubscription()">
-          {{ 'IDEA.SUBSCRIPTION.BACK_TO_FREE_PLAN' | translate }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row *ngIf="platformStore === 'ios'">
-      <ion-col padding>
+    <div class="actionBtns" *ngIf="plans?.length">
+      <ion-button expand="block" fill="clear" color="medium" (click)="restorePurchases()">
+        {{ 'IDEA.SUBSCRIPTION.RESTORE_PURCHASES' | translate }}
+      </ion-button>
+      <ion-button
+        expand="block"
+        fill="clear"
+        color="danger"
+        *ngIf="subscription && isSubscriptionExpired(subscription)"
+        (click)="removeExpiredSubscription()"
+      >
+        {{ 'IDEA.SUBSCRIPTION.BACK_TO_FREE_PLAN' | translate }}
+      </ion-button>
+      <p *ngIf="platformStore === 'ios'">
         <ion-text color="medium">
           {{ 'IDEA.SUBSCRIPTION.HOW_IT_WORKS_APPLE' | translate }}
         </ion-text>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-button
-          expand="block"
-          fill="clear"
-          color="medium"
-          (click)="extBrowser.openLink(t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL'))"
-        >
-          {{ 'IDEA.AUTH.TERMS_AND_CONDITIONS' | translate }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-button
-          expand="block"
-          fill="clear"
-          color="medium"
-          (click)="extBrowser.openLink(t._('IDEA_VARIABLES.PRIVACY_POLICY_URL'))"
-        >
-          {{ 'IDEA.AUTH.PRIVACY_POLICY' | translate }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row *ngIf="subscription.planId">
-      <ion-col>
-        <ion-button expand="block" fill="clear" color="danger" (click)="cancelSubscription()">
-          {{ 'IDEA.SUBSCRIPTION.CANCEL_SUBSCRIPTION' | translate }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      </p>
+      <ion-button
+        expand="block"
+        fill="clear"
+        color="medium"
+        (click)="extBrowser.openLink(t._('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL'))"
+      >
+        {{ 'IDEA.AUTH.TERMS_AND_CONDITIONS' | translate }}
+      </ion-button>
+
+      <ion-button
+        expand="block"
+        fill="clear"
+        color="medium"
+        (click)="extBrowser.openLink(t._('IDEA_VARIABLES.PRIVACY_POLICY_URL'))"
+      >
+        {{ 'IDEA.AUTH.PRIVACY_POLICY' | translate }}
+      </ion-button>
+      <ion-button expand="block" fill="clear" color="danger" *ngIf="subscription" (click)="cancelSubscription()">
+        {{ 'IDEA.SUBSCRIPTION.CANCEL_SUBSCRIPTION' | translate }}
+      </ion-button>
+    </div>
+  </ion-list>
 </ion-content>
