--- a/idea/customFields/customFieldMeta.component.scss
+++ b/idea/customFields/customFieldMeta.component.scss
@@ -21,5 +21,8 @@ ion-text.obligatoryDot::after {
       margin-left: 8px;
       margin-right: 8px;
     }
+    ion-badge {
+      margin-right: 4px;
+    }
   }
 }
