--- a/idea/agenda/calendar.component.html
+++ b/idea/agenda/calendar.component.html
@@ -91,7 +91,7 @@
       <ion-label>
         {{ 'IDEA.AGENDA.CALENDARS.LINKED_TO' | translate }}
         {{ 'IDEA.AGENDA.CALENDARS.SERVICES.' + calendar.external.service | translate }}
-        <p>{{ calendar.external.name }}</p>
+        <p>{{ calendar.external.name }} ({{ calendar.external.email }})</p>
       </ion-label>
       <ion-icon slot="end" [name]="getServiceIcon(calendar.external.service)"></ion-icon>
     </ion-item>
