--- a/idea/agenda/calendars.component.html
+++ b/idea/agenda/calendars.component.html
@@ -1,5 +1,12 @@
 <ion-grid class="maxWidthContainer" *ngIf="ideaMembership">
   <ion-row>
+    <ion-col class="ion-text-right">
+      <ion-button [title]="t._('IDEA.AGENDA.CALENDARS.ADD_CALENDAR_HINT')" (click)="addCalendar()">
+        {{ 'COMMON.ADD' | translate }}
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
     <ion-col [size]="12" [sizeLg]="6">
       <ion-list class="aList" lines="full">
         <ion-list-header>
@@ -19,11 +26,6 @@
         ></idea-calendar-item>
         <ion-item *ngIf="privateCals && !privateCals.length">
           {{ 'IDEA.AGENDA.CALENDARS.NO_CALENDARS' | translate }}
-        </ion-item>
-        <ion-item [button]="true" [title]="t._('IDEA.AGENDA.CALENDARS.ADD_CALENDAR_HINT')" (click)="addCalendar()">
-          <ion-label class="ion-text-center">
-            {{ 'COMMON.ADD' | translate }}
-          </ion-label>
         </ion-item>
       </ion-list>
     </ion-col>
@@ -46,11 +48,6 @@
           (select)="cal.external && !cal.external.calendarId ? linkExtCalendarOrDelete(cal) : editCalendar(cal)"
         ></idea-calendar-item>
         <ion-item *ngIf="teamCals && !teamCals.length">{{ 'IDEA.AGENDA.CALENDARS.NO_CALENDARS' | translate }}</ion-item>
-        <ion-item [button]="true" [title]="t._('IDEA.AGENDA.CALENDARS.ADD_CALENDAR_HINT')" (click)="addCalendar()">
-          <ion-label class="ion-text-center">
-            {{ 'COMMON.ADD' | translate }}
-          </ion-label>
-        </ion-item>
       </ion-list>
     </ion-col>
   </ion-row>
