--- a/idea/email/emailData.component.html
+++ b/idea/email/emailData.component.html
@@ -2,7 +2,7 @@
   class="emailDataItem"
   [lines]="lines"
   [button]="true"
-  [title]="placeholder"
+  [title]="placeholder || ''"
   [class.withLabel]="label"
   (click)="openEmailDataConfiguration()"
 >
